--- a/src/main/resources/templates/order_form.html
+++ b/src/main/resources/templates/order_form.html
@@ -14,10 +14,14 @@
         <tr>
             <td>
                 <b th:text="${'Welcome back, ' + currentUser.name + '!'}"></b>
+                <br>
+                <b th:text="${'You have ' + currentUser.bonus_coins + ' bonus coins!'}"
+                   th:if="${currentUser.name != 'Stranger' and currentUser.isActivated}">
+                </b>
                 <form action="http://localhost:8088/logout">
                     <input type="submit" value="Login/Logout"/>
                 </form>
-                <form action="http://localhost:8088/logout"
+                <form action="http://localhost:8088/authenticate"
                       th:if="${currentUser.name != 'Stranger' and !currentUser.isActivated}">
                     <input type="submit" value="Validate account"/>
                 </form>
@@ -49,6 +53,10 @@
                 <form action="http://localhost:8088/roles/list"
                       th:if="${#strings.contains(currentRoles, 'ROLE_ADMIN')} or ${#strings.contains(currentRoles, 'ROLE_CEO')}">
                     <input type="submit" value="Manage roles"/>
+                </form>
+                <form action="http://localhost:8088/users/list"
+                      th:if="${#strings.contains(currentRoles, 'ROLE_ADMIN')} or ${#strings.contains(currentRoles, 'ROLE_CEO')}">
+                    <input type="submit" value="Manage users"/>
                 </form>
                 <form action="http://localhost:8088/sideitems/list"
                       th:if="${#strings.contains(currentRoles, 'ROLE_ADMIN')} or ${#strings.contains(currentRoles, 'ROLE_CEO')}">
@@ -82,56 +90,56 @@
         </tr>
     </table>
 </header>
-<table>
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>User</th>
-        <th>Restaurant</th>
-        <th>To deliver?</th>
-        <th>Address</th>
-        <th>Created</th>
-        <th>Confirmed</th>
-        <th>Assembled</th>
-        <th>Delivered</th>
-        <th>Comment</th>
-        <th>Pizzas</th>
-        <th>Side Items</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="order : ${orders}">
-        <td th:text="${order.id} ? ${order.id} : ''"></td>
-        <td th:text="${order.user != null} ? ${order.user.name} : ''"></td>
-        <td th:text="${order.restaurant != null} ? ${order.restaurant.id} : ''"></td>
-        <td th:text="${order.to_deliver} ? 'Yes' : 'No'"></td>
-        <td th:text="${order.address != null} ? ${order.address.street + ', ' + order.address.building + '-' + order.address.apartment} : ''"></td>
-        <td th:text="${order.created}"></td>
-        <td th:text="${order.confirmed}"></td>
-        <td th:text="${order.assembled}"></td>
-        <td th:text="${order.delivered}"></td>
-        <td th:text="${order.comment}"></td>
-        <td>
-            <span th:each="pizza : ${pizzasForOrders[__${order.id}__]}"
-                  th:text="${pizza.name + ', ' + pizza.pizza_size}"></span>
-        </td>
-        <td>
-            <span th:each="item : ${sideItemsForOrders[__${order.id}__]}" th:text="${item.name}"></span>
-        </td>
-        </td>
-        <td>
-            <form th:action="@{'/orders/edit/' + ${order.id}}" th:method="get">
-                <button type="submit">Edit</button>
-            </form>
-        </td>
-        <td>
-            <form th:action="@{'/orders/delete/' + ${order.id}}" th:method="get">
-                <button type="submit">Delete</button>
-            </form>
-        </td>
-    </tr>
-    </tbody>
-</table>
+<!--<table>-->
+<!--    <thead>-->
+<!--    <tr>-->
+<!--        <th>ID</th>-->
+<!--        <th>User</th>-->
+<!--        <th>Restaurant</th>-->
+<!--        <th>To deliver?</th>-->
+<!--        <th>Address</th>-->
+<!--        <th>Created</th>-->
+<!--        <th>Confirmed</th>-->
+<!--        <th>Assembled</th>-->
+<!--        <th>Delivered</th>-->
+<!--        <th>Comment</th>-->
+<!--        <th>Pizzas</th>-->
+<!--        <th>Side Items</th>-->
+<!--    </tr>-->
+<!--    </thead>-->
+<!--    <tbody>-->
+<!--    <tr th:each="order : ${orders}">-->
+<!--        <td th:text="${order.id} ? ${order.id} : ''"></td>-->
+<!--        <td th:text="${order.user != null} ? ${order.user.name} : ''"></td>-->
+<!--        <td th:text="${order.restaurant != null} ? ${order.restaurant.id} : ''"></td>-->
+<!--        <td th:text="${order.to_deliver} ? 'Yes' : 'No'"></td>-->
+<!--        <td th:text="${order.address != null} ? ${order.address.street + ', ' + order.address.building + '-' + order.address.apartment} : ''"></td>-->
+<!--        <td th:text="${order.created}"></td>-->
+<!--        <td th:text="${order.confirmed}"></td>-->
+<!--        <td th:text="${order.assembled}"></td>-->
+<!--        <td th:text="${order.delivered}"></td>-->
+<!--        <td th:text="${order.comment}"></td>-->
+<!--        <td>-->
+<!--            <span th:each="pizza : ${pizzasForOrders[__${order.id}__]}"-->
+<!--                  th:text="${pizza.name + ', ' + pizza.pizza_size}"></span>-->
+<!--        </td>-->
+<!--        <td>-->
+<!--            <span th:each="item : ${sideItemsForOrders[__${order.id}__]}" th:text="${item.name}"></span>-->
+<!--        </td>-->
+<!--        </td>-->
+<!--        <td>-->
+<!--            <form th:action="@{'/orders/edit/' + ${order.id}}" th:method="get">-->
+<!--                <button type="submit">Edit</button>-->
+<!--            </form>-->
+<!--        </td>-->
+<!--        <td>-->
+<!--            <form th:action="@{'/orders/delete/' + ${order.id}}" th:method="get">-->
+<!--                <button type="submit">Delete</button>-->
+<!--            </form>-->
+<!--        </td>-->
+<!--    </tr>-->
+<!--    </tbody>-->
+<!--</table>-->
 
 
 </body>
